--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Page</title>
     <script type="module">
-        import { getSerialPort, createNesigner } from './dist/index.js';
+        // import { getSerialPort, createNesigner } from './dist/index.js';
+        import { getSerialPort, createNesigner } from './src/index.ts';
 
         window.connect = async function () {
             try {
