--- a/index.html
+++ b/index.html
@@ -124,7 +124,16 @@
                     window.sign();
                     window.ping();
                     window.echo();
-                    await new Promise(resolve => setTimeout(resolve, 200));
+
+                    // 测试加密和解密功能
+                    window.tempText = "Hello, World!"; // 重置测试文本
+                    await window.encrypt();
+                    await window.decrypt();
+
+                    // 测试 NIP44 加密和解密功能
+                    window.tempText = "Hello, World!"; // 重置测试文本
+                    await window.nip44Encrypt();
+                    await window.nip44Decrypt();
                 }
                 showResult('Batch test done.');
             } catch (error) {
@@ -159,7 +168,7 @@
         <button id="removeKeyBtn" disabled onclick="removeKey()">Remove Key</button>
         <button id="pingBtn" disabled onclick="ping()">Ping</button>
         <button id="echoBtn" disabled onclick="echo()">Echo</button>
-        <!-- <button id="batchTestBtn" onclick="batchTest()">batchTest</button> -->
+        <button id="batchTestBtn" onclick="batchTest()">batchTest</button>
     </div>
     <div id="result"></div>
 </body>
